--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -53,6 +53,8 @@
     <string name="xtended_gplus_summary">Join here to learn more</string>
     <string name="xtended_telegram">Official Telegram Support Group</string>
     <string name="xtended_telegram_summary">Join Here for Instant Support</string>
+    <string name="credits_header">Credits Section</string>
+    <string name="credits_summary">Huge Thanks To Them</string>
     <string name="dev_1">MadhuSudhan Painoori aka Mady51</string>
     <string name="dev1_description">Kernel Developer, The OS Boot Manager</string>
     <string name="dev_2">Santosh Jha aka SuperDroidBond</string>
@@ -78,6 +80,24 @@
     <string name="device6_description">Ronak aka RonAk47</string>
     <string name="device_7">Xiaomi Redmi 4A | rolex</string>
     <string name="device7_description">Yousef Algadri</string>
+    <string name="hail_to_teams">All Hail To These Teams</string>
+    <string name="team_1">LineageOS | CyanogenMOD</string>
+    <string name="team_2">Team GZOSP</string>
+    <string name="team_3">Team ColtOS</string>
+    <string name="team_4">Team OmniROM</string>
+    <string name="team_5">Team DirtyUnicorns</string>
+    <string name="team_6">Team Nitrogen OS</string>
+    <string name="team_7">Team AICP</string>
+    <string name="team_8">Team Cr Droid</string>
+    <string name="team_9">Team ScrewdAOSP</string>
+    <string name="team_10">Team CypherOS</string>
+    <string name="team_11">Team LiquidRemix</string>
+    <string name="team_12">Team BenzoROM</string>
+    <string name="team_13">Team Bootleggers Rom</string>
+    <string name="team_14">Team AOSP Extended</string>
+    <string name="team_15">Team ResurrectionRemix</string>
+    <string name="team_16">Team Havoc OS</string>
+    <string name="team_17">Team Substratum</string>
     <string name="spt_1">ZeNiXxX</string>
     <string name="spt_2">SKULSHADY</string>
     <string name="spt_3">HolyAngel</string>
