--- a/res/xml/xtended_info.xml
+++ b/res/xml/xtended_info.xml
@@ -37,11 +37,11 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         </Preference>
     <PreferenceCategory
             android:key="xtended_credits"
-            android:title="@string/thanks_header">	
-        <Preference			
-            android:key="xtended_credits"
-            android:title="@string/thanks_header"
-            android:fragment="com.android.settings.xtended.XtendedCreditsInfo"/>
+	    android:title="@string/credits_header">
+         <Preference			
+             android:key="xtended_credits"
+             android:title="@string/credits_summary"
+             android:fragment="com.android.settings.xtended.XtendedCreditsInfo"/>
     </PreferenceCategory>
     <PreferenceCategory
             android:key="xtended_dev"
