--- a/res/layout/security_dialog_layout.xml
+++ b/res/layout/security_dialog_layout.xml
@@ -13,8 +13,8 @@
             android:layout_margin="16dp"
             android:text="@string/security_dialog_title"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="22sp"
-            android:textStyle="bold" />
+	    android:textSize="20sp"
+	    android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/android_security_title"
-                android:textColor="?android:attr/textColorSecondary"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="16sp" />
 
             <TextView
@@ -38,14 +38,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:textColor="?android:attr/colorAccent"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/vendor_patch_level_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/vendor_security_title"
-                android:textColor="?android:attr/textColorSecondary"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="16sp" />
 
             <TextView
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/android_security_summary"
-                android:textColor="?android:attr/textColorSecondary"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="16sp" />
 
             <TextView
@@ -70,16 +70,17 @@
                 android:layout_marginTop="20dp"
                 android:textStyle="bold"
                 android:text="@string/android_functional_updates_title"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="16sp" />
-
+                android:textColor="?android:attr/textColorPrimary"
+                 android:textSize="16sp" />
+ 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/android_functional_updates_summary"
-                android:textColor="?android:attr/textColorSecondary"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="16sp" />
+
         </LinearLayout>
 
     </LinearLayout>
