--- a/res/values/custom_colors.xml
+++ b/res/values/custom_colors.xml
@@ -34,7 +34,7 @@
     <color name="accent_picker_dark_accent">@android:color/black</color>
 
     <!-- DU Tweaks -->
-    <color name="BottomBarBackgroundColor">@*android:color/primary_device_default_dark</color>
+    <color name="BottomBarBackgroundColor">@*android:color/resolver_list_bg</color>
     <color name="bottom_nav_text_icon_active">@android:color/white</color>
     <color name="bottom_nav_text_icon_inactive">@*android:color/hint_foreground_light</color>
 
