--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -69,7 +69,7 @@
     <string name="device_1">OnePlus 5T | dumpling</string>
     <string name="device1_description">Mukesh Singh aka mukesh22584</string>
     <string name="device_2">OnePlus 5 | cheeseburger</string>
-    <string name="device2_description">Traian Simedru aka simedrut | Mukesh Singh aka mukesh22584</string>
+    <string name="device2_description">Mukesh Singh aka mukesh22584</string>
     <string name="device_3">OnePlus 3 Unified | oneplus3, oneplus3t</string>
     <string name="device3_description">Santosh Jha aka SuperDroidBond</string>
     <string name="device_4">Xiaomi Redmi Note 4 | mido</string>
