--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -107,11 +107,11 @@
                 android:title="@string/fcc_equipment_id"
                 android:summary="@string/summary_placeholder"/>
 
-        <!-- Device Baseband version -->
+        <!-- Device Baseband version
         <Preference
                 android:key="baseband_version"
                 android:title="@string/baseband_version"
-                android:summary="@string/summary_placeholder"/>
+		android:summary="@string/summary_placeholder"/> -->
 
         <!-- Device Kernel version -->
         <Preference
@@ -121,7 +121,7 @@
 
         <!-- ROM Version -->
         <Preference
-                android:key="modversion"
+                android:key="xtended_version"
                 android:title="@string/rom_version_title"
                 android:summary="@string/device_info_default"/>
 
