--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -191,8 +191,7 @@
         <!-- Vibrate on touch -->
         <SwitchPreference
           android:key="vibrate_on_touch"
-          android:title="@string/vibrate_on_touch_title"
-          android:summary="@string/vibrate_on_touch_summary" />
+	  android:title="@string/vibrate_on_touch_title" />
 
         <!-- Dock speaker plays -->
         <DropDownPreference
