--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -407,4 +407,7 @@
     <string name="xtended_update_settings_title">Xtended Updates</string>
     <string name="xtended_update_settings_summary">Check available update</string>
 
+    <!-- Density category -->
+    <string name="density_category">Density options</string>
+
 </resources>
