--- a/res/values/x_strings.xml
+++ b/res/values/x_strings.xml
@@ -439,4 +439,13 @@
     <string name="directly_show_lock">Direct unlock</string>
     <string name="directly_show_lock_summary">Skip the swipe to unlock screen and immediately begin key entry</string>
 
+    <!-- Ambient Play -->
+    <string name="ambient_play_title" translatable="false">@*android:string/ambient_recognition_notification</string>
+    <string name="ambient_play_summary">Show nearby songs</string>
+    <string name="ambient_play_lockscreen_title">Show songs on lock screen</string>
+    <string name="ambient_play_notifications_title">Notifications</string>
+    <string name="ambient_play_switch_bar_on">On</string>
+    <string name="ambient_play_switch_bar_off">Off</string>
+    <string name="ambient_play_help_text">When music is playing nearby, you can see the song name and artist. Battery life and data usage may be affected if this is enabled.</string>
+
 </resources>
