--- a/res/drawable/ic_homepage_xtensions.xml
+++ b/res/drawable/ic_homepage_xtensions.xml
@@ -30,9 +30,8 @@
 
     <item
         android:width="@dimen/dashboard_tile_foreground_image_size"
-        android:height="@dimen/dashboard_tile_foreground_image_size"
-        android:start="@dimen/dashboard_tile_foreground_image_inset"
-        android:top="@dimen/dashboard_tile_foreground_image_inset"
+	android:height="@dimen/dashboard_tile_foreground_image_size"
+	android:gravity="center"
         android:drawable="@drawable/ic_settings_xtensions" />
 </layer-list>
 
