--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -43,6 +43,11 @@
         android:title="@string/smart_battery_manager_title"
         settings:controller="com.android.settings.fuelgauge.batterytip.BatteryManagerPreferenceController" />
 
+    <PreferenceScreen
+        android:key="battery_charge_sound"
+        android:title="@string/notification_battery_charge_level_title"
+        android:fragment="com.android.settings.fuelgauge.BatteryChargeSoundSettings" />
+
     <com.android.settings.fuelgauge.PowerGaugePreference
         android:key="last_full_charge"
         android:title="@string/battery_last_full_charge"
