--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -82,8 +82,7 @@
         android:key="volume_link_notification"
         android:title="@string/volume_link_notification_title"
         android:defaultValue="true"
-        android:order="-139"
-        settings:controller="com.android.settings.notification.LinkedVolumesPreferenceController"/>
+	android:order="-139" />
 
     <com.msm.xtended.preferences.SystemSettingSwitchPreference
         android:key="incall_notifications_vibrate"
